[update] Recipe Board Package now only gives 1 random Recipe Board